# otus_homework_django

./: .env.example  .gitignore  Makefile  README.md  console_client.py  manage.py  pyproject.toml  report.xlsx
api/: serializers.py  urls.py  views.py
courses/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_alter_course_teachers.py
courses/templates/courses/: create_course.html  delete_course.html  show_course.html  update_course.html
settings/: settings.py  urls.py  wsgi.py
teachers/: admin.py
teachers/migrations/: 0001_initial.py
templates/: base.html
training_website/: asgi.py  settings.py  urls.py
training_website/courses/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
training_website/teachers/: admin.py  apps.py  models.py
training_website/templates/: base.html  index.html
training_website/templates/courses/: courses_list.html  update_course.html
user_message/: forms.py  models.py  tasks.py  urls.py  views.py
user_message/migrations/: 0001_initial.py
user_message/templates/user_message/: user_message.html
